examples/test/testpolicy16689.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16689
  namespace: namespace137
spec:
  podSelector:
    matchLabels:
      key13: value21
      key24: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value36
          key10: value47
      podSelector:
        matchLabels:
          key16: value37
          key17: value27
          key12: value15
